assets/css/_layout/remove-dialog.css
:root {
    --remove-action-color: #e10000;
}

.remove-dialog {
    --background-color: var(--view-background-color);
    --border-color: #858585;
    --shadow-color: rgba(0,0,0, 0.4);

    background: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 7px;
    box-shadow: 0 4px 22px var(--shadow-color);
    padding: 40px 35px 35px;

    max-width: 500px;

    text-align: center;
    animation: dialog_show 0.5s ease;
}
.remove-dialog::backdrop {
    --background-color: rgba(0,0,0, 0.4);

    background: var(--background-color);
}

@media (max-width: 600px)
{
    .remove-dialog {
        margin-left: 30px;
        margin-right: 30px;
    }
}

.remove-dialog-question {
    font-weight: 700;
}

.remove-dialog .form-item-checkbox {
    display: inline-block;
    margin-top: 15px;
}

.remove-dialog button {
    display: inline-block;
    margin: 30px 7px 0 7px;
}
.remove-dialog button.remove {
    color: var(--remove-action-color);
}

@keyframes dialog_show
{
    from {
        opacity: 0;
        transform: scale(0.9) translateY(-70px);
    }
    to {
        transform: scale(1) translateY(0);
    }
}

@media (prefers-reduced-motion)
{
    .remove-dialog {
        animation: none;
    }
}

.remove-button {
    /* https://www.iconfinder.com/icons/1041650/garbage_rubbish_trash_icon */
    --background-image: url("data:image/svg+xml,%3Csvg height='32' viewBox='-0.5 -0.7 31 32' width='31' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath clip-rule='evenodd' d='M29.8 8.3zm-2 2h-1v18c0 1.1-.9 2-2 2h-19c-1.1 0-2-.9-2-2v-18H2c-1.1 0-2-.9-2-2s.9-2 2-2h6.9C9.2 2.8 12 0 15.4 0s6.3 2.8 6.5 6.3h5.8c1.1 0 2 .9 2 2 .1 1.1-.8 2-1.9 2zM15.4 3.2c-1.8 0-3.2 1.3-3.4 3.1h6.9c-.3-1.7-1.7-3.1-3.5-3.1zm8.4 8.3c0-.5-.2-.9-.5-1.1h-16c-.3.2-.5.6-.5 1.1v14.7c0 .9.7 1.6 1.6 1.6h13.8c.9 0 1.6-.7 1.6-1.6V11.5zm-5 .8h3v14h-3v-14zm-5 0h3v14h-3v-14zm-5 0h3v14h-3v-14zM0 8.3z' fill='%23e10000' fill-rule='evenodd'/%3E%3C/svg%3E");

    padding-left: 10px !important;
    padding-right: 10px !important;
    background: none;
    border: none;
    box-shadow: none;

    color: var(--remove-action-color);
    opacity: 0.95;

    background-image: var(--background-image);
    background-repeat: no-repeat;
    background-size: 15px;
    background-position: left 10px center;

    text-indent: 20px;
}
.form-action-button .remove-button {
    position: absolute;
    left: -10px;
}

@media (max-width: 767px)
{
    .remove-button {
        text-indent: -9999px;
        overflow: hidden;
        background-position: center;
        background-size: 15px;
        width: 40px;
    }
}

@media (prefers-color-scheme: dark)
{
    :root {
        --remove-action-color: #ff7979;
    }

    .remove-dialog {
        --border-color: #686868;
    }
    .remove-dialog::backdrop {
        --background-color: rgba(0,0,0, 0.4);
    }

    .remove-button {
        /* https://www.iconfinder.com/icons/1041650/garbage_rubbish_trash_icon */
        --background-image: url("data:image/svg+xml,%3Csvg height='32' viewBox='-0.5 -0.7 31 32' width='31' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath clip-rule='evenodd' d='M29.8 8.3zm-2 2h-1v18c0 1.1-.9 2-2 2h-19c-1.1 0-2-.9-2-2v-18H2c-1.1 0-2-.9-2-2s.9-2 2-2h6.9C9.2 2.8 12 0 15.4 0s6.3 2.8 6.5 6.3h5.8c1.1 0 2 .9 2 2 .1 1.1-.8 2-1.9 2zM15.4 3.2c-1.8 0-3.2 1.3-3.4 3.1h6.9c-.3-1.7-1.7-3.1-3.5-3.1zm8.4 8.3c0-.5-.2-.9-.5-1.1h-16c-.3.2-.5.6-.5 1.1v14.7c0 .9.7 1.6 1.6 1.6h13.8c.9 0 1.6-.7 1.6-1.6V11.5zm-5 .8h3v14h-3v-14zm-5 0h3v14h-3v-14zm-5 0h3v14h-3v-14zM0 8.3z' fill='%23ff7979' fill-rule='evenodd'/%3E%3C/svg%3E");
    }
}

